# pluely

./: package.json
.github/workflows/: build-pluely2.yml
src-tauri/: Cargo.toml  pluely2.desktop  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  window.rs
src/components/: DragButton.tsx
src/hooks/: useChatCompletion.ts  useMenuItems.tsx  useSettings.ts  useSystemAudio.ts
src/lib/: index.ts  utils.ts
src/lib/database/: config.ts
src/pages/app/components/completion/: AutoSpeechVad.tsx
src/pages/app/components/speech/: index.tsx
src/pages/chats/components/: View.tsx
src/pages/dashboard/: index.tsx
src/pages/responses/: index.tsx
src/pages/responses/components/: AutoScrollToggle.tsx  LanguageSelector.tsx  ResponseLength.tsx
src/pages/screenshot/components/: ScreenshotConfigs.tsx
src/pages/settings/components/: Theme.tsx
src/pages/shortcuts/components/shortcuts/: ShortcutManager.tsx
src/pages/system-prompts/: Generate.tsx  PluelyPrompts.tsx
src/types/: settings.hook.ts
